--- a/Tools/Sample.Migrator/Sample.Migrator.csproj
+++ b/Tools/Sample.Migrator/Sample.Migrator.csproj
@@ -6,16 +6,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.9" />
       <PackageReference Include="Mono.Options" Version="6.6.0.161" />
-      <PackageReference Include="Radilovsoft.Rest.Data.Ef" Version="1.0.0" />
+      <PackageReference Include="Radilovsoft.Rest.Data.Ef" Version="1.0.5" />
     </ItemGroup>
 
     <ItemGroup>
